--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -39,22 +39,18 @@ h6,
 main,
 nav,
 section {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px maroon solid;
 }
 
 blockquote,
-dd,
-dl,
-dt,
 figcaption,
 figure,
 hr,
 li,
 ol,
 p,
-pre,
 ul {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px brown solid;
 }
 
 a,
@@ -87,7 +83,7 @@ time,
 ul,
 var,
 wbr {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 area,
@@ -96,7 +92,7 @@ img,
 map,
 track,
 video {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 embed,
@@ -105,21 +101,21 @@ object,
 param,
 picture,
 source {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 svg,
 math {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 canvas {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 del,
 ins {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 caption,
@@ -132,7 +128,7 @@ tfoot,
 th,
 thead,
 tr {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 button,
@@ -149,19 +145,47 @@ output,
 progress,
 select,
 textarea {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
 }
 
 details,
 dialog,
-menu,
-summary {
-  outline: calc(0.5rem / 1) red solid;
+menu {
+  outline: 1px red solid;
 }
 
 slot,
 template {
-  outline: calc(0.5rem / 1) red solid;
+  outline: 1px red solid;
+}
+
+[data-wf] {
+  position: relative;
+  z-index: 1;
+  outline: calc(0.25rem / 2) solid var(--wireframe--wire);
+}
+
+[data-wf]::before {
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: linear-gradient(to top right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), linear-gradient(to bottom right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), var(--wireframe--bg-color);
+  color: var(--wireframe--wire);
+  content: attr(data-wf);
+  font: bold 2em Jubilat, Georgia, serif;
+  text-shadow: 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color);
 }
 
 /* ========================================================================== *\
@@ -567,6 +591,7 @@ ul.menu-left.collapse {
     height: 100%;
     padding: 0.5rem;
     margin: 0 auto;
+    outline: 2.5px rgba(128, 0, 0, 0.5) solid;
   }
 }
 
@@ -592,6 +617,7 @@ ul.menu-left.collapse {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    outline: 2.5px rgba(255, 0, 0, 0.5) solid;
   }
 }
 
@@ -606,6 +632,7 @@ ul.menu-left.collapse {
     height: 100%;
     padding: 0.5rem;
     margin: 0 auto;
+    outline: 2.5px rgba(165, 42, 42, 0.5) solid;
   }
 }
 
