--- a/assets/styles/scss/components/containers/_flex-container.scss
+++ b/assets/styles/scss/components/containers/_flex-container.scss
@@ -7,6 +7,8 @@
 .flex-container {
   @include breakpoint(xxs) {
     @include container(flex);
+
+    outline: 2.5px rgba(255, 0, 0, 0.5) solid;
   }
 }
 
