--- a/assets/styles/scss/components/containers/_grid-container.scss
+++ b/assets/styles/scss/components/containers/_grid-container.scss
@@ -7,6 +7,8 @@
 .grid-container {
   @include breakpoint(xxs) {
     @include container(grid);
+
+    outline: 2.5px rgba(165, 42, 42, 0.5) solid;
   }
 }
 
