--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -19,9 +19,20 @@ svg {
 
 // -  <<----------<< Specific >>---------->>
 
-.icon {
-  color: var(--foreground-color);
+.fas {
+  width: $font-size--2;
+  height: 100%;
+  margin: 0 $whitespace--xs 0 0;
   fill: var(--foreground-color);
+  font-size: $font-size--1;
+}
+
+.fab {
+  width: $font-size--3;
+  height: 100%;
+  margin: 0 $whitespace--xs 0 0;
+  fill: var(--foreground-color);
+  font-size: $font-size--3;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -40,12 +51,3 @@ img {
 // -  <<----------<< Specific >>---------->>
 
 // ...
-
-/* Set the size of the div element that contains the map */
-#map {
-  /* The height is 400 pixels */
-  width: 100%;
-  height: 400px;
-
-  /* The width is the width of the web page */
-}
