added headers to all pages

--- a/assets/styles/scss/imports/_variables.scss
+++ b/assets/styles/scss/imports/_variables.scss
@@ -1,10 +1,10 @@
 //Colors
 
-$title-blue: #35495e;
-$subtitle-blue: #526488;
-$bg-blue: #ADD8E6FF;
-$bg-blue--dark: #7d9ea8;
-
+$accent-color: #C8AC7F;
+$light-blue:#b0c4de;
+$dark-blue:#132636;
+$dark-bg:#0f0e0e;
+$light-bg:#F7F5F5;
 
 //Media Queries
 
