--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -11,10 +11,6 @@
   &__container {
     // ...
   }
-
-  &__nav {
-    // ...
-  }
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -23,6 +19,9 @@
 
 .main-nav {
   // ...
+  &__container {
+    // ...
+  }
   &__nav-logo {
     // ...
   }
