--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 // -----------------------------------------------------------------------------
-// *  Containers
+// *  Universal Containers
 // -----------------------------------------------------------------------------
 
 @mixin container(
@@ -55,6 +55,17 @@
 }
 
 // -----------------------------------------------------------------------------
+// *  Specific Containers
+// -----------------------------------------------------------------------------
+
+// -  <<----------<< Block-Box>>---------->>
+
+@mixin dimensions($width: 100%, $height: auto) {
+  width: $width;
+  height: $height;
+}
+
+// -  <<----------<< Flex-Box >>---------->>
 
 // #  Flex-Items ---> Children
 @mixin flex-items($basis: $dimension--xxs, $grow: 1, $shrink: 1) {
@@ -70,6 +81,8 @@
   align-items: $align;
   justify-content: $justify;
 }
+
+// -  <<----------<< Grid-Box >>---------->>
 
 // #  Grid-Container
 @mixin grid-container() {
