--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -337,12 +337,12 @@ a {
   text-decoration: none;
 }
 
-a i {
-  margin-left: 0.5rem;
-}
-
 a:hover {
   color: var(--secondary-color);
+}
+
+a > i {
+  margin: 0 0.5rem 0 0;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -364,17 +364,13 @@ svg {
 
 .fas {
   width: 1.25rem;
-  height: 100%;
-  margin: 0 0.5rem 0 0;
-  fill: var(--foreground-color);
+  height: auto;
   font-size: 1rem;
 }
 
 .fab {
   width: 2.44141rem;
-  height: 100%;
-  margin: 0 0.5rem 0 0;
-  fill: var(--foreground-color);
+  height: auto;
   font-size: 2.44141rem;
 }
 
