--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -22,6 +22,7 @@
   &__container {
     // ...
   }
+
   &__nav-logo {
     // ...
   }
@@ -53,23 +54,21 @@
   background-attachment: fixed;
   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
   background-position: center center;
-  background-repeat: no-repeat;
   background-size: cover;
 
   &__container {
     // height: 100%;
     // max-height: 100vh;
     justify-content: center;
-    background-image: linear-gradient(
-      45deg,
+    background-image:
+      linear-gradient(45deg,
       $linear-gradient--red,
       $linear-gradient--orange,
-      $linear-gradient--yellow
-    );
+      $linear-gradient--yellow);
   }
 
   &__visual {
-    max-height: 50vh;
+    max-height: 35vh;
     // ...
   }
 
@@ -89,11 +88,6 @@
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
-  display: flex;
-  place-content: center;
-  place-items: center;
-  place-self: center;
-
   &__title {
     // ...
   }
