style-main: css configuration v5

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -715,13 +715,13 @@ input:checked + .slider::before {
 *  _home-webshop.scss: This partial file contains the styles of the 'home-webshop' page.
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  Header-Main: Header
+-  HEADER: main-header
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  Nav-Main: Nav
+-  NAV: main-nav
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  Section-1: Hero
+-  SECTION 1: hero
 \* -------------------------------------------------------------------------- */
 .hero {
   position: relative;
@@ -743,19 +743,19 @@ input:checked + .slider::before {
   max-height: 35vh;
 }
 
-.hero__sub-title {
+.hero__title {
   color: var(--tertiary-color);
   font-size: 1.25rem;
 }
 
 /* -------------------------------------------------------------------------- *\
--  Section-2: Hot Items
+-  SECTION 2: Hot Items
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  Section-3: About
+-  SECTION 3: About
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
--  Footer-Main: Footer
+-  FOOTER-MAIN: Footer
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
 *  _login.scss: This partial file contains the styles of the 'login' page.
