--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -3,10 +3,10 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
--  Header-Main: Header
+-  HEADER: main-header
 \* -------------------------------------------------------------------------- */
 
-.header {
+.main-header {
   // ...
   &__container {
     // ...
@@ -14,7 +14,7 @@
 }
 
 /* -------------------------------------------------------------------------- *\
--  Nav-Main: Nav
+-  NAV: main-nav
 \* -------------------------------------------------------------------------- */
 
 .main-nav {
@@ -45,7 +45,7 @@
 }
 
 /* -------------------------------------------------------------------------- *\
--  Section-1: Hero
+-  SECTION 1: hero
 \* -------------------------------------------------------------------------- */
 
 .hero {
@@ -60,11 +60,12 @@
     // height: 100%;
     // max-height: 100vh;
     justify-content: center;
-    background-image:
-      linear-gradient(45deg,
+    background-image: linear-gradient(
+      45deg,
       $linear-gradient--red,
       $linear-gradient--orange,
-      $linear-gradient--yellow);
+      $linear-gradient--yellow
+    );
   }
 
   &__visual {
@@ -76,7 +77,7 @@
     // ...
   }
 
-  &__sub-title {
+  &__title {
     color: var(--tertiary-color);
     font-size: $font-size--2;
     // ...
@@ -84,7 +85,7 @@
 }
 
 /* -------------------------------------------------------------------------- *\
--  Section-2: Hot Items
+-  SECTION 2: Hot Items
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
@@ -126,7 +127,7 @@
 }
 
 /* -------------------------------------------------------------------------- *\
--  Section-3: About
+-  SECTION 3: About
 \* -------------------------------------------------------------------------- */
 
 .about {
@@ -138,7 +139,7 @@
 }
 
 /* -------------------------------------------------------------------------- *\
--  Footer-Main: Footer
+-  FOOTER-MAIN: Footer
 \* -------------------------------------------------------------------------- */
 
 .footer {
