--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -8,6 +8,7 @@
 
 .main-header {
   // ...
+
   &__container {
     // ...
   }
@@ -19,6 +20,7 @@
 
 .main-nav {
   // ...
+
   &__container {
     // ...
   }
@@ -56,6 +58,11 @@
   background-position: center center;
   background-size: cover;
 
+  &__title {
+    color: var(--tertiary-color);
+    // ...
+  }
+
   &__container {
     // height: 100%;
     // max-height: 100vh;
@@ -75,12 +82,6 @@
   &__subject {
     // ...
   }
-
-  &__title {
-    color: var(--tertiary-color);
-    font-size: $font-size--2;
-    // ...
-  }
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -88,6 +89,8 @@
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
+  // ...
+
   &__title {
     // ...
   }
@@ -97,6 +100,8 @@
   }
 
   .hot-item {
+    // ...
+
     &__title {
       // ...
     }
@@ -138,7 +143,43 @@
 .about {
   // ...
 
+  &__title {
+    // ...
+  }
+
   &__container {
+    // ...
+  }
+}
+
+.about-visual {
+  // ...
+
+  &__container {
+    // ...
+  }
+
+  &__image {
+    // ...
+  }
+}
+
+.about-text {
+  // ...
+
+  &__container {
+    // ...
+  }
+
+  &__title {
+    // ...
+  }
+
+  &__sub-title {
+    // ...
+  }
+
+  &__paragraph {
     // ...
   }
 }
