--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -67,11 +67,12 @@
     // height: 100%;
     // max-height: 100vh;
     justify-content: center;
-    background-image:
-      linear-gradient(45deg,
+    background-image: linear-gradient(
+      45deg,
       $linear-gradient--red,
       $linear-gradient--orange,
-      $linear-gradient--yellow);
+      $linear-gradient--yellow
+    );
   }
 
   &__visual {
@@ -188,10 +189,42 @@
 -  FOOTER-MAIN: Footer
 \* -------------------------------------------------------------------------- */
 
-.footer {
+.main-footer {
+  // background-color: orange;
   // ...
 
   &__container {
+    // background-color: orange;
     // ...
   }
+
+  .foot-nav {
+    // background-color: orange;
+    // ...
+
+    &__container {
+      // background-color: coral;
+      // ...
+    }
+  }
+
+  .foot-contact {
+    // background-color: orange;
+    // ...
+
+    &__container {
+      // background-color: darkred;
+      // ...
+    }
+  }
 }
+
+// .foot-nav {
+//   background-color: orange;
+//   // ...
+
+//   &__container {
+//     background-color: orange;
+//     // ...
+//   }
+// }
